# rodex-coursework

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_full_name.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  persons.py  relationships.py  reports.py  sources.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  person.py  relationship.py  source.py  user.py
backend/app/schemas/: person.py  relationship.py  report.py  source.py  user.py
backend/app/services/: sosa.py
backend/app/tests/: conftest.py  helpers.py  test_auth.py  test_persons.py  test_relationships.py  test_reports.py  test_sosa.py  test_sources.py
docs/: architecture.md  mvp.md  testing.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: auth.ts  persons.ts  relationships.ts  reports.ts  sources.ts
frontend/src/components/: Dashboard.tsx  LoginForm.tsx  Pagination.tsx  PersonsPanel.tsx  RegisterForm.tsx  RelationshipsPanel.tsx  Skeletons.tsx  SosaReportPanel.tsx  SosaTreeView.tsx  SourcesPanel.tsx
